tests/scripts/type_errors/missing_arguments.roto
fn bar(a: u32) -> u32 {
	a
}

fn foo() {
	bar()
}
